Symbol-Font-For-ASL/stylesheets/stylesheet.css
/* ... */
.tar_download_link {
  display: block;
  float: right;
  width: 90px;
  height:70px;
  text-indent: -5000px;
  overflow: hidden;
  background: url(../images/sprite_download.png) no-repeat bottom right;
  margin-left: 10px;
}

.zip_download_link:hover {
  background: url(../images/sprite_download.png) no-repeat top left;
}

.tar_download_link:hover {
  background: url(../images/sprite_download.png) no-repeat top right;
}

#main_content_wrap {
  background: #f2f2f2;
  border-top: 1px solid #111;
  border-bottom: 1px solid #111;
}

.main_content {

}

#footer_wrap {
  background: #212121;
}

.side {
  float: left;
  width: 35%;
  margin-right:1em;
}

/* classes */


.boxshadow, .boxshadow-p {
  margin-bottom:1.5em;
  background-color:#fff;
}

.boxshadow-p {
  padding: .5em 1em;
}

.padded {
  padding-left:.5em;
  padding-right:.5em;
}

.boxshadow, .boxshadow-p, a.selected, a.button {
  box-shadow: 0 0 5px #ebebeb;
  -webkit-box-shadow: 0 0 5px #ebebeb;
  -moz-box-shadow: 0 0 5px #ebebeb;
  -o-box-shadow: 0 0 5px #ebebeb;
  -ms-box-shadow: 0 0 5px #ebebeb;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}

a.selected {
  color: #fff;
  background-color: #212121;
  padding: .25em .5em;
}

.boxshadow-p a.selected {
  color: #000;
  background-color: transparent;
}

a.button {
  display:inline-block;
  background-color: #0090ff;
  color: #fff;
  padding: 2px .5em;
  vertical-align:middle;
}

.headline {
  font-size:  200%;
  text-align: center;
}

.headline .description {
  font-size:  50%;
}


dl.two-col dt {
  float:left;
  width:20%;
}

dl.two-col dd {
  padding-left: 25%;
  margin-bottom:1em;
}

dl.two-col p {
  padding-left: 25%;
}

dl.inline {
/*  white-space: nowrap;*/
  width: 100%;
  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
  box-sizing: border-box;         /* Opera/IE 8+ */
}

dl.inline dt {
  display:inline-block;
  vertical-align:middle;
  font-weight:normal;
  text-align:center;
  margin:0;
  padding:0;
  margin-bottom:.25em;
  overflow:visible;
}

dl.dt-bold dt {
  font-weight:bold;
}

dl.inline dd {
  display:inline-block;
  vertical-align:middle;
  margin:0;
  padding:0;
  margin-bottom:.25em;
  overflow:visible;
  margin-right: -1em;
}
dl.left-align dt {
  text-align: left;
}

dl.inline0 dt { width: 100%; }
dl.inline0 dd { width: 100%; }

dl.inline1 dt { width: 49%; }
dl.inline1 dd { width: 49%; }

dl.inline1b dt { width: 25%; }
dl.inline1b dd { width: 73%; }

dl.inline2 dt { width: 16%; }
dl.inline2 dd { width: 32%; }

dl.inline2a dt { width: 10%; }
dl.inline2a dd { width: 38%; }

dl.inline2b dt { width: 20%; }
dl.inline2b dd { width: 28%; }

dl.inline2c dt { width: 24%; }
dl.inline2c dd { width: 24%; }

dl.inline2d dt { width: 38%; }
dl.inline2d dd { width: 10%; }

dl.inline3 dt { width: 10%; }
dl.inline3 dd { width: 22%; }

dl.inline3b dt { width: 12%; }
dl.inline3b dd { width: 20%; }

dl.inline3c dt { width: 15%; }
dl.inline3c dd { width: 15%; }

dl.inline4 dt { width: 8%; }
dl.inline4 dd {  width: 15%; }

dl.inline4b dt { width: 12%; }
dl.inline4b dd { width: 12%; }

dl.inline5 dt { width: 10%; }
dl.inline5 dd {  width: 9%; }

dl.inline dd input {width:80%; padding:.25em 9%; }

.columns3 {
  width:30%;
  padding:0;
  margin:0;
  margin-right:1%;
  float:left;
}
.columns3 dd {
  padding: 0;
}
.columns3 ul {
  padding: 0;
}
.columns3 li {
  list-style:disc inside;
  padding: 0;
}

.floatr {
  float: right;
  margin-left: 1em;
  width: 65%;
}

.floatl {
  float: left;
  margin-right: 1em;
  width: 65%;
}


ul.alpha li {
 list-style-type:upper-alpha;
}
ul.column {
  width:50%;
  float:left;
}

/* page styles */

.asl {
  font-size:   166%;
  font-family: ASL-Font;
  line-height: 1;
  letter-spacing: 0px;
  font-weight: normal;
}

.si5s,
.signscript,
.aslphabet,
.hamnosys {
  font-size:   200%;
  line-height: 1;
  letter-spacing: 0px;
  font-weight: normal;
}

.iswa,
.signfont,
.signscript {
  font-size:150%;
}

.big .gloss {
  font-size: 75%;
}

.medium {
  font-size: 125%;
}
.medium dd {
  font-size: 80%;
}
.medium dd.asl {
  font-size: 166%;
}

.dd-small dd {
  white-space:nowrap;
  font-size: 65%;
}

.asl.medium {
  font-size:   200%;
}
.asl.big {
  font-size:   225%;
}

.asl.inline{
  vertical-align:middle;
}
.asl sup {
  font-size:75%;
  vertical-align:super;
  margin:.1em;
}
.keyboard {
  font-size:120%;
  letter-spacing: .7em;
  line-height: 1.5;
}
.keyboard sup {
  font-size:75%;
  vertical-align:super;
  margin:.1em;
}
.feedback {
  float:right;
  color: #fff;
  padding: 5px 10px;
  margin:10px;
  background-color: #0090ff; 
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}
th a {
  color:#fff;
  text-decoration:underline;
}

ul.inline {
  padding-left:0;
}
ul.inline li {
  display:inline-block;
  list-style:none;
  padding-left:0;
  margin-right:.75em;
  
}
nav ul.inline {
  padding-left:20px;
  
}

.blue {
  color: #0090ff; 
}
.red {
  color: #e00000; 
}
.gray {
  color:#aaa;
}
.note {
  color: #666;
  padding: 0 2em;
  margin: 0 0 .5em;
}


.center {
  text-align:center;
}

.quiz {
  text-align:left;
  font-size:200%;
  font-family: ASL-Font;
  width:100%;
  padding:.25em;
  margin-bottom:.5em;
}
.quiz.center {
  text-align:center;
}

.correct {
  background-color:#efe;
  color:#1a1;
}

.tryit {
  text-align:center;
  font-size:32px;
  font-family: ASL-Font;
  width:100%;
  padding:.25em;
  margin-bottom:.5em;
}

ul.results li {
  list-style-type:none;
  padding:.5em;
  margin-bottom:.5em;
}


nav .boxshadow, nav .boxshadow-p {
  text-align:left;
}
nav .boxshadow a, nav .boxshadow-p a {
  color: #333;
  font-weight:bold;
}
/* ... */

